manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cronjob-labels-admission-webhook
  name: cronjob-labels-admission-webhook
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: cronjob-labels-admission-webhook
  type: ClusterIP
